# Ad-hoc-poly

./: CMakeLists.txt  Makefile
src/: main.cpp  sinus_taylor.cpp  sinus_taylor.hpp
